--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -29,6 +29,8 @@ dist.jar=${dist.dir}/Tareas.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
+file.reference.hamcrest-core-1.3.jar=libs/hamcrest-core-1.3.jar
+file.reference.junit-4.12.jar=libs/junit-4.12.jar
 includes=**
 jar.compress=false
 javac.classpath=
@@ -39,10 +41,12 @@ javac.processorpath=\
     ${javac.classpath}
 javac.source=1.8
 javac.target=1.8
+${libs.junit.classpath}
 javac.test.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}:\
-    ${libs.junit_4.classpath}
+    ${file.reference.junit-4.12.jar}:\
+    ${file.reference.hamcrest-core-1.3.jar}
 javac.test.processorpath=\
     ${javac.test.classpath}
 javadoc.additionalparam=
