--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -62,7 +62,7 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
-main.class=cripto.AES
+main.class=cripto.RSA
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
