--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -33,13 +33,15 @@ file.reference.antlr-4.5.3-complete.jar=libs/antlr-4.5.3-complete.jar
 file.reference.hamcrest-core-1.3.jar=libs/hamcrest-core-1.3.jar
 file.reference.junit-4.12.jar=libs/junit-4.12.jar
 file.reference.mysql-connector-java-3.0.17-ga-bin.jar=libs/mysql-connector-java-3.0.17-ga-bin.jar
+file.reference.rsyntaxtextarea-2.0.5.1.jar=libs/rsyntaxtextarea-2.0.5.1.jar
 file.reference.selenium-server-standalone-3.0.1.jar=libs/selenium-server-standalone-3.0.1.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${file.reference.antlr-4.5.3-complete.jar}:\
     ${file.reference.selenium-server-standalone-3.0.1.jar}:\
-    ${file.reference.mysql-connector-java-3.0.17-ga-bin.jar}
+    ${file.reference.mysql-connector-java-3.0.17-ga-bin.jar}:\
+    ${file.reference.rsyntaxtextarea-2.0.5.1.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
