fix config sonar

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -8,7 +8,7 @@ sonar.projectVersion=1.0
 # This property is optional if sonar.modules is set. 
 sonar.sources=.
 
-sonar.exclusions=build/**, node_modules/**, nbproject/**, tests/**, js/libs/**
-
+sonar.exclusions=build/**, dist/**, nbproject/**, test/**, js/libs/**,ejemplos/**,out/**,**/*Lexer.java,**/*Parser.java,**/*Listener.java
+sonar.tests=build/test/results
 # Encoding of the source code. Default is default system encoding
 sonar.sourceEncoding=UTF-8
