change sonar props

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -10,5 +10,6 @@ sonar.sources=.
 
 sonar.exclusions=build/**, dist/**, nbproject/**, test/**, js/libs/**,ejemplos/**,out/**,**/*Lexer.java,**/*Parser.java,**/*Listener.java
 sonar.tests=build/test/results
+sonar.junit.reportPaths=build/test/results
 # Encoding of the source code. Default is default system encoding
 sonar.sourceEncoding=UTF-8
